--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -8,71 +8,164 @@
 \chapter{Summary of Results and Conclusion}\label{ch:results_conclusion}
 
 
-The idea of this chapter is to present a combined overview of the work done and results we encountered in \cref{ch:descr-risk, ch:machineLearning, ch:modelSelection, ch:ensembleMethods}. All in all, we
- and Conclusion at the end.
-
-As a summary of the work done we can say we have discussed issues on the most of the following items:
-
 %\cref{ch:descr-risk}
 %\cref{ch:machineLearning}
 %\cref{{ch:modelSelection}
 %\cref{ch:ensembleMethods}
-
 %\cref{}
 
+% handling data, models and features with acumen
+% After extensive research of machine learning literature and CDR usage in health problems.
+
+The idea of this chapter is to present a combined overview of the work done and results we encountered in \cref{ch:descr-risk, ch:machineLearning, ch:modelSelection, ch:ensembleMethods}.
+All in all, we intend to showcase most of the relevant information from the preceding sections.
+The overall picture of this work shows that there is evidence to confirm the hypothesis which stipulates that there are social interactions captured by the cellphone usage logs.
+This is because the dataset is informative enough on long-term migrations and human mobility.
+To summarize the work done we can say that:
+% A summary of the work done we can say we have discussed issues on the most of the following items:
+
+
 \begin{itemize}
-    \item
-    Predict a user's province when given information on only the first four features.
-    \item Predict a user's number of calls made on weekends when given information on the last four features.
-    \item Give an estimate of the probability density function of user's calls duration, during weekdays.
+
+    \item We presented a visualization of the datasets with heat maps that showed georeferrenced call interactions and colored cellphone antennas according to their level of vulnerable interactions.
+    The maps produced showed results that were coherent with the expert's knowledge of the endemic zone's migration patterns.
+    Added to this, they produced many interesting insights of specific antennas that have higher vulnerable interactions with the endemic region, where these are located outside of the endemic region.
+
+    \item We applied a systematic approach to analyze the information contained in the dataset.
+    The idea was to try to explore the human mobility patterns, as captured by the phonecall records.
+
+    \item We broke the problem of long-term human migrations down to four tasks which were analyzed separately.
+    To peform this analysis, we introduced machine learning theory and methods.
+    A discussion of these methods' applications to these kinds of tasks was ellaborated.
+    The models presented are some of the most common techniques found in the literature for the classification task we were trying to solve.
+
+    \item We compared the strengths and weaknesses of these methods.
+    The algorithms  were used to estimate the probability of each user's migrations.
+    Also, we showcased the method's results differences for the tasks defined in \cref{ch:machineLearning}.
+
+    \item Where possible, we exposed the best features of the dataset to solve the general problem.
+    These exposed the relationship between the attributes that characterize vulnerable user interactions, and the target variable of the task.
+    Other relevant features, such as the user's mobility size, were also found to provide relevant information for the classification task.
+     % the algorithms detected that the characterization of the user's mobility provided relevant information to the task. It was important in detecting the long-term movement of users.
+
+    \item According to our results, there are algorithms which are reliable enough to detect users which have migrated from old regions. In some instances, we have achieved high values across all scoring measures.
+
 \end{itemize}
+
+From our findings, we can say that there is no single method that can be single-handedly applied to all problems.
+Each of the tasks will have different scores across the algorithms used.
+% and the same applies to the metrics used to evaluate them.
+However, the results show that the performance of Random Forests or Gradient Boosting models is best over other models such as Logistic Regression or Naive Bayes algorithms.
+The best models can find complex interactions in the data whilst taking care not to lose generalization power.
 
 \todo{Reword sentences. Expand, correct and finish them in a cohesive structure.}
 
+\subsection{Key Results}
 
-\subsection{Some nice sentences}
-
-
-
-The overall picture shows that the hypothesis stipulates that there are social interactions captured by the cellphone usage logs, which is informative on long-term migrations and disease spread.
+\todo{Rewrite all key results of the project.}
 
 
-The experiments discussed in previous sections highlight the benefit of using these types of data.
-The Argentinean and Mexican case studies allow to reach an inisght on to whether it is possible to characterize human movements of long durations.
-CDRs are rich enough in information to detect detailed patterns of users moving to and from a particular area, at a national level.
-
-
-
-Some supervised classification models realized the importance of attributes tagged with vulnerable behavior obtained from the CDR.
-
-
-
-CDRs can be extensively used for non business purposes and, specifically in this case, there is light evidence that they might capture well the fluxes of diseases among humans.
-This data can be used as a surrogate to other, more traditional, methods of disease control and surveillance.
-This work intends to help authorities with disease-control strategies in way which is not intrusive for cellphone users.
-Measures can then be applied outside of the endemic region, and directed towards specific neighbourhoods and communities by using the recommendations output by the risk algorithm.
+In this work on CDRs, the Argentinean and Mexican case studies allow us to find that it is possible to characterize human movements of long durations.
+Where cellphone datasets are rich enough in information to detect detailed patterns of users moving to and from a particular area, at a national level.
 
 
 
 
+The heatmaps shown in Section~\cref{ch:descr-risk} expose a `temperature' descent from the core regions outwards.
+The heat is concentrated in the ecoregion and gradually descends as we move further away.
+This expected behavior could be explained by the fact that calls are in general of a local nature.
+Where users, in general, have an antenna usage limited to 3 or 4 telco antennas used during the period analyzed.
 
-extensive research of machine learning literature and CDR usage in health problems.
-handling data, models and features with acumen
-focus on the strengths of the ensemble learners to achieve higher predictions
-try and draw the greates prediction performance from the features
+The risk maps highlight that the interactions from non-endemic antennas towards those in the endemic region are non-homogenous.
+As an example, \cref{fig:amba_map} outlines various antennas with higher vulnerability, which would help detect communities with higher probability of disease prevalence.
+These anomalies found could point to potential communities atypical of their neighboring region.
+They stand out for their strong communication ties with the regions studied, showing significantly higher links of vulnerable communication.
+In the images presented, the differences in the vulnerable interactions are clear.
+The tetection of these antennas through the visualizations was of great value to the health Mundo Sano Foundation researchers participating in this project.
 
 
-Through a number of experiments, we demonstrated how the supervised classifaction models performed across different prediction tasks.
-These case test sheds light on how relevant this dataset is to the question on complex long-term migrations.
+
+
+
+
+In \cref{ch:machineLearning, ch:modelSelection, ch:ensembleMethods }, we introduced and evaluated a systematic process that tackles the problem of predicting long-term migrations.
+As a start, we wrote an introductory review for a list of supervised classification algorithms.
+
+Then, through a number of experiments, we demonstrated how the supervised classifaction models performed across different prediction tasks.
+For each model, we tried to draw the greatest prediction performance from the features extracted from the dataset.
+
+Results evidence indicating that a supervised classification predictor can be built to detect large patterns of human migrations over time.
+They also point to the fact that CDRs are particularly well suited for this task.
+Where it is possible to explore CDRs as a mean to tag human mobility.
+
+
+The supervised classification experiments done on the various prediction tasks were discussed in previous sections.
+The results highlighted the benefit of using this type of data for the problem.
+
+
+% in the preceding chapters to our tasks.
+The best learners for the following tasks were the Random Forests and Gradient Boosting models.
+Due to this, we focused our work on the strengths of the ensemble learners to achieve higher predictions.
+Still, we saw differences in both ensemble methods, where the former was better at this score, whilst the latter at the second.
+
+
+The features most brought up in the experiments of ensemble learners where A, B, c.
+These indicated this and that.
+They also pointed to information in  blablabla.
+Some supervised classification models realized the importance of attributes tagged with vulnerable behavior obtained from the CDR.\@
+
+The Random Forest model played an important role in having the highest scores across all tasks and in presenting the best features of the datset.
+This information was later availed by the boosting models trained on said set of features.
+
+
+
+With this, we showed that it is possible to use the mobile phone records of users during a bounded period (of 5 months) in order to predict whether they have lived in the endemic zone $E_Z$ in a previous time frame (of 19 months).
+
+Combining social and geolocated information, the data at hand has been given an innovative use, different from its original billing purpose.
+
+% To conclude, the results presented in this work show that
+
+
+
+Epidemic counter-measures nowadays include setting national surveillance systems, vector-centered policy interventions and individual screenings of people. These measures require costly infrastructures to set up and be run. However, systems built on top of existing mobile networks would demand lower costs, taking advantage of the already available infrastructure. The potential value these results could add to health research is hereby exposed.
+Finally, the results stand as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
+
+
+
+\subsection{In-depth discussion}
+
+
+% - hacer explicita la respuesta a esta pregunta: Que tanto se puede predecir long term migrations usando datos de CDRs?
+% - cuales fueron las mejores tecnicas? Que tuvieron a favor y en contra?
+% - repasar los 5 problemas y resumir los mejores resultados de c/ algoritmo. Que scorings tuvieron?
+% - Enganchar los resultados con lo que se vio en los mapas. Hablar de como los features del algoritmo estan relacionados con el armado del mapa y como se "valida" la hipotesis.
+
+
+
+
+
+These test case shed light on how relevant this dataset is to the question on complex long-term migrations.
 Their complexity and scale of these movements can be, up to a certain degree, assimilated by probabilistic algorithms, using the models outlined before.
-In this owrk we took advantatge of the large user scale and temporal range of the CDRs allowed us to capture a variety of human movements throughout the country.
+
+
+In this work we took advantatge of the large user scale and temporal range of the CDRs allowed us to capture a variety of human movements throughout the country.
 Migration patterns can then be used to suggest actual epidemic spread of this disease into areas not deemed endemic.
 
 
-There are also weak points with this methodology. We can not jump directly to a disease spread conclusion when we are only looking
 
-Bias in the sample of the country's population that is part of our dataset.
-Still, these results should be interpreted with caution, since we have no real comparisons with actual disease data, outside of the endemic region and at a municipal or regional level.\footnote{As a matter of fact, we have tried to contact hearlth institutions and organizations working on the matter to try and enrich the dataset with more info. This intent did not reach any health data of the kind.}
+
+\subsection{Dawbacks on the methodology}
+
+Several weak points can be made on our methodology.
+An important observation is that we can not directly jump these conclusions on-to a disease spread model.
+In this work, we are looking solely at human mobility to and from endemic regions.
+This does not imply disease spread or prevalence.
+Yet, on the advice of this topic's researchers, this work does bring valuable insights to the problem.
+
+
+Another issue is the representation bias of our dataset.
+As shown in \cref{tab:distribution_by_state}, there are differences in the percentage of population represented by our dataset vs.\ current state distribution estimates.
+With this, results should be interpreted with caution, since we have no real comparisons with actual disease data, outside of the endemic region and at a municipal or regional levels.\footnote{As a matter of fact, we have tried to contact hearlth institutions and organizations working on the matter to try and enrich the dataset with more info. This intent did not reach any health data of the kind.}
 
 There are other interesting limitations concerning international pattern migrations.
 For this work, we measured migrations only in national phone owners.
@@ -81,15 +174,23 @@ With the current dataset we cannot capture international migrations and our anal
 The same applies for detecting movement patterns of people which lack cell phone antennas.
 
 In extracting each user's home antenna, based on the user's ``working hours'', we also made the assumption that this can be used in a generalized case.
-Even though this decision was supported by past research, it might not be easily translated into datasets of other geographical and cultural regions.
+Even though this decision was supported by past research, it might not be easily translated into datasets across other geographical and cultural regions.
 
-Time seasonalities and sationarity was considered but only in a limited fashion.
+Finally, time seasonalities and stationarity, were considered but only in a limited fashion.
 Weekends and working hours were separately tagged in attributes.
 The same with month specific attributes for the user's accalling patterns.
 However there are mor long-term time segmentation which were not used in this work.
 It is possible that migration patterns be strongly related to seasonal factors such as, for example, in the agriculture workforce.
 
+The importance of other user specific features, such as demographics, should be examined as well.
+Yet these are out of the scope of this work, for the lack of data.
+
+
 % discriminated in the construction of the features, yet there were no long-term time
+
+
+
+
 
 
 The resulting analysis, allowed to show that the Risk maps we developed are of interest to national health campaigns.
@@ -98,8 +199,6 @@ They pintpoint to likely spots of high disease prevalence, with a low cost to pr
 Next to traditional health control actions, this research may provide a very insightful piece of information for decision-makers.
 Capturing long-term human movements will also enable better simiulations of disease spreads in different contexts.
 In this work, the impact of this in our predictive capacity of disease prevalence is shown.
-
-
 
 
 
@@ -120,66 +219,43 @@ Some are better at capturing the relevant information to predict human movements
 This is becaause not all social information is presented directly in the dataset, and feature interactions are helpful.
 
 
-The importance of other user specific features, such as demographics, should be examined as well.
-Yet these are out of the scope of this work, for the lack of data.
-
-
 This work may give us some insights into future disease spreads in other similar contexts.
 Where
 It also helps to showcase interesting ways of using the CDRs for reasons other than logging a user\'s calling expenses.
 
 
-\subsection{Descriptions of key results}
+
+The implications of these results argue that CDRs can be extensively used for non business purposes and, specifically in this case, there is light evidence that they might capture well the fluxes of diseases among humans.
+This data was used as a surrogate to other, more traditional, methods of disease control and surveillance.
+This work intends to help authorities with disease-control strategies in way which is not intrusive for cellphone users.
+Measures can then be applied outside of the endemic region, and directed towards specific neighbourhoods and communities by using the recommendations output by the risk algorithm.
 
 
-\todo{Rewrite all key results of the experiments.}
-
-The features most brought up in the experiments of ensembel learners where A, B, C .
-These indicated this and that.
-They also pointed to information in.. bla
+\cref{tab:all_results} shows a compendium of the results obtained from the CDR datset, using all classification models.
+Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
+However, where available, we show the resulting classifier's test performance across three scores: $Accuracy$, $F1$ and $ROC AUC$.
 
 
-The best learners for the following tasks where A,B.
-We saw differences in these and that type of learners, where the former was better at this score, whilst the latter at the second.
-
-The Random Forest model played an important role in having the highest scores across all tasks and in presenting the best features of the datset.
-This information was later availed by the boosting models trained on said set of features.
-
-
-We wrote an introdcutory review for a list of supervised classification algorithms and then applied them in the preceding chapters to our tasks.
-These models presented are some of the most common techniques found in the literature for the classification task we were trying to solve.
-
-
-
-The heatmaps shown in Section~\cref{ch:descr-risk} expose a `temperature' descent from the core regions outwards.
-The heat is concentrated in the ecoregion and gradually descends as we move further away.
- This expected behavior could be explained by the fact that calls are in general of a local nature and limited to 3 or 4 main antennas used per user.
-
-Another fact found in this work is of certain communities atypical to their neighboring region.
-They stand out for their strong communication ties with the studied region, showing significantly higher links of vulnerable communication.
-The detection of these antennas through the visualizations was of great value to the health researchers participating in this project.
-
-In \cref{ch:ensembleMethods, ch:modelSelection, ch:machineLearning}, we introduced and evaluated a systematic process that tackles the problem of predicting long-term migrations.
-In particular, we showed that it is possible to use the mobile phone records of users during a bounded period (of 5 months) in order to predict whether they have lived in the endemic zone $E_Z$ in a previous time frame (of 19 months).
-The results obtained demonstrate that CDRs are particularly well suited for this task.
-
-To conclude, the results presented in this work show that it is possible to explore CDRs as a mean to tag human mobility.
-Combining social and geolocated information, the data at hand has been given an innovative use, different from its original billing purpose.
-
-Epidemic counter-measures nowadays include setting national surveillance systems, vector-centered policy interventions and individual screenings of people. These measures require costly infrastructures to set up and be run. However, systems built on top of existing mobile networks would demand lower costs, taking advantage of the already available infrastructure. The potential value these results could add to health research is hereby exposed.
-Finally, the results stand as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
+\caption{Table comparing cross validated results for all of the classifiers run in this work. For each task, we show the triplet of $Accuracy$, $F1$ and $ROC AUC$ test scores after a full cross validation procedures on the learner.}
+\label{tab:all_results}
+\centering
+\begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
+%{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
+\toprule
+Measure & Problem 1 & Problem 2 & Problem 3 & Problem 4  \\
+\midrule
+Naive Bayes     & (0.84,0.75,0.82)  & (0.64,0.31,0.61)  &  (0.65,0.45,0.63)   & (0.85,0.62,0.76)   \\
+Logistic Classifier   & (0.97,0,96,0.99)  & (0.35,0.52,0.67)  &  (,,)   & (,,)   \\
+Random Forest   & (,,)  & (,,)  &  (,,)   & (,,)   \\
+Gradient Boosting   & (,,)  & (,,)  &  (,,)   & (,,)   \\
+% CV $Accuracy$ score     & 0.842  & 0.649  &  0.658   &  0.852   \\
+% CV $F1$ score           & 0.753  & 0.313  &  0.457   &  0.626   \\
+% CV $ROC AUC$ score      & 0.827  & 0.617  &  0.635   &  0.768   \\
+\bottomrule
+\end{tabular*}
+\end{table}
 
 
-
-
-
-% Algorithms: SVM, Random Forest and Logistic Regression, Multinomial Naive Bayes
-
-
-
-% L-BFGS is the optimization routine. limited memory Broyden–Fletcher–Goldfarb–Shanno
-%(reference the limited memory Broyden–Fletcher–Goldfarb–Shanno (BFGS) algorithm \url{https://en.wikipedia.org/wiki/Limited-memory_BFGS} )
-%% es un algoritmo de optimizacion numerica para computar minimos de funciones
 
 
 % % With a running time of 80s, 10 steps are generally needed to achieve a 0.977 validation accuracy score on
@@ -187,21 +263,6 @@ Finally, the results stand as a proof of concept which can be extended to other 
 % % Table~\cref{ts}
 % The following table
 % shows the scores obtained by the selected model on the out-of-sample set.
-
-% \begin{center}
-% 	\begin{tabular}{ l l }
-% 		\toprule
-% 		Score & Value \\
-% 		\midrule
-% 		F1 score & 0.964537  \\
-% 		Accuracy & 0.980670  \\
-% 		AUC    & 0.991593  \\
-% 		Precision & 0.970838  \\
-% 		Recall  & 0.958316  \\
-% 		\bottomrule
-% 	\end{tabular}
-% \end{center}
-
 
 % \begin{table}\label{tab:results}[ht]
 % 	\caption{Resulting scores.}
@@ -219,6 +280,7 @@ Finally, the results stand as a proof of concept which can be extended to other 
 % 		\bottomrule
 % 	\end{tabular}
 % \end{table}
+
 
 % High values across all scoring measures are achieved. % with the best estimator, with the lowest metric starting at a value of 0.958.
 % These results can be explained by the fact that
@@ -240,8 +302,7 @@ Finally, the results stand as a proof of concept which can be extended to other 
 
 ASDF ASDF
 
-
-\subsection{ Future Work Lines}
+\subsection{ Lines of Future Work }
 
 The mobility and social information extracted from CDRs analysis has been shown to be of practical use for long-term human migrations and for Chagas disease research.
 it adds value and information to help make data driven decisions which in turn is key to support epidemiological policy interventions in the region.
@@ -257,10 +318,12 @@ For the purpose of continuing this line of work, the following is a list of poss
     Using the CDR data, antennas could be automatically tagged as rural by analyzing the differences between the spatial distribution of the antennas in each area.
     A similar goal could be to identify precarious settlements within urban areas, with the help of census data sources.
 
-    \item [Seasonal migration analysis.] Experts from the \textit{Mundo Sano} Foundation underlined that many seasonal migrations occur in the \textit{Gran Chaco} region.
+    \item [International and seasonal migration analysis.] Experts from the \textit{Mundo Sano} Foundation underlined that many seasonal and international migrations occur in the \textit{Gran Chaco} region.
     Workers are known to leave the endemic area for several months possibly introducing the parasite to foreign populations.
-    The analysis of these movements can give information on which communities have a higher influx of people from the endemic zone during a certain period.
-    %\item Add more regions to the analysis.
+    The same happens with foreign workers, which are not part of our datset.
+    The mobility analysis on particular time periods or events, for example on holidays, or specific migrations from bordering countries, can give information on which communities have a higher influx of people from the endemic zone during a certain period.
+    This additional analysis would also lower the bias of the current dataset.
+
 
     \item [Search for epidemiological data at a detailed level.] For instance, specific historical infection cases.
     Splitting the endemic region according to the infection rate in different areas, or considering particular infections.
@@ -275,22 +338,21 @@ For the purpose of continuing this line of work, the following is a list of poss
 
 
 % \subsection{Supervised Algorithms}
-\subsection{Brief Technical Notes }
+% \subsection{Brief Technical Notes }
 
 
-Results were satisfactory in most algorithms such as Gradient Boosting, Random Forest and Logistic Regression.
-The Multinomial Naive Bayes method was used solely for benchmarking reasons and for its fast runtime and low number of parameters required to configure.
-All algorithms were run on a 16-core Linux machine with 72GB of RAM.\@ Processing and learning scripts were run on Python.
-When available, we showed how the feature importance methods qualified the attributes of the dataset, selecting the most relevant for the experiment.
+% Results were satisfactory in most algorithms such as Gradient Boosting, Random Forest and Logistic Regression.
+% The Multinomial Naive Bayes method was used solely for benchmarking reasons and for its fast runtime and low number of parameters required to configure.
+% All algorithms were run on a 16-core Linux machine with 72GB of RAM.\@ Processing and learning scripts were run on Python.
+% When available, we showed how the feature importance methods qualified the attributes of the dataset, selecting the most relevant for the experiment.
 
-\todo{add python, graphlab, sklearn, pandas citations}.
+% \todo{add python, graphlab, sklearn, pandas citations}.
 
-The project involved working with more than 2 terabytes of raw data which had to be extracted, processed, transformed, loaded and classified as demanded.
-To do this, most of the project's code was built using existing Machine Learning and Data Analysis frameworks for Python.
-For the latter part of the job, we used Pandas and Graphlab whilst for the classification part it was mostly implemented with Scikit-learn~\textcite{scikit-learn} and, in some cases, with Graphlab~\textcite{graphlab}.
 
-We can not recommend highly enough all the aforementioned python modules.
-All were critical in the development of a working experimentation pipeline.
+% For the latter part of the job, we used Pandas and Graphlab whilst for the classification part it was mostly implemented with Scikit-learn~\textcite{scikit-learn} and, in some cases, with Graphlab~\textcite{graphlab}.
+
+% We can not recommend highly enough all the aforementioned python modules.
+% All were critical in the development of a working experimentation pipeline.
 
 
 
